fix testimonial alignment, grid alignment

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -664,7 +664,7 @@ h1, h2, h3, h4, h5, p, li {
   .fund-grid .filtered-funds ul.fundlist li.detail.testimonials {
     padding: 25px 0; }
     .fund-grid .filtered-funds ul.fundlist li.detail.testimonials .content {
-      width: 384px;
+      width: 382px;
       float: left; }
   .fund-grid .filtered-funds ul.fundlist li.detail .content {
     margin: auto;
@@ -716,10 +716,11 @@ h1, h2, h3, h4, h5, p, li {
           text-decoration: none; }
   .fund-grid .filtered-funds ul.fundlist li.detail aside {
     display: inline-block;
-    margin-left: 16px; }
+    margin-left: 12px; }
     .fund-grid .filtered-funds ul.fundlist li.detail aside li {
       display: inline-block;
       margin-right: 12px;
+      vertical-align: top;
       width: 185px; }
       .fund-grid .filtered-funds ul.fundlist li.detail aside li:last-child {
         margin-right: 0; }
